# adventofcode2022

./: .gitignore  day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day1_scala.ipynb  day2_scala.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb  pyproject.toml  task_1.ipynb
.ipynb_checkpoints/: task_1-checkpoint.ipynb
