[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["Gert-Jan Braeckevelt <gert-jan.braeckevelt@persgroep.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupyter-black = "^0.3.3"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
